--- a/templates/site/index.html.twig
+++ b/templates/site/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Blog index!{% endblock %}
+{% block title %}Site Index!{% endblock %}
 
 {% block body %}
     {% for id, post in posts %}
