--- a/templates/post/index.html.twig
+++ b/templates/post/index.html.twig
@@ -11,6 +11,10 @@
         <a href="{{ path('post_post', {'id': post.id}) }}">
         {{ include('post/raw-post.html.twig', { 'post': post}) }}
         </a>
+
+        <small class="d-block text-right mt-3">
+            <a href="{{ path('post_edit',  {'id': post.id}) }}">Edit</a>
+        </small>
     {% endfor %}
 
 {% endblock %}
