--- a/templates/post/index.html.twig
+++ b/templates/post/index.html.twig
@@ -1,6 +1,11 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+    {% for message in app.flashes('notice') %}
+        <div class="alert-success">
+            {{ message }}
+        </div>
+    {% endfor %}
     <small class="d-block text-right mt-3">
         <a href="{{ path('post_add') }}">Add New</a>
     </small>
@@ -14,6 +19,7 @@
 
         <small class="d-block text-right mt-3">
             <a href="{{ path('post_edit',  {'id': post.id}) }}">Edit</a>
+            <a href="{{ path('post_delete',  {'id': post.id}) }}">Delete</a>
         </small>
     {% endfor %}
 
