security controller actions and templates using security voter

--- a/templates/post/index.html.twig
+++ b/templates/post/index.html.twig
@@ -15,8 +15,12 @@
         </a>
 
         <small class="d-block text-right mt-3">
+            {% if is_granted('edit', post) %}
             <a href="{{ path('post_edit',  {'id': post.id}) }}">Edit</a>
+            {% endif %}
+            {% if is_granted('delete', post) %}
             <a href="{{ path('post_delete',  {'id': post.id}) }}">Delete</a>
+            {% endif %}
         </small>
     {% endfor %}
 
