--- a/templates/post/user-posts.html.twig
+++ b/templates/post/user-posts.html.twig
@@ -8,6 +8,19 @@
                     {{ user.fullName }}
                         <small class="text-muted">. @{{ user.username }}</small>
                 </h5>
+
+                {#app.user is the currently authenticated user#}
+                {% if user != app.user %}
+                    {% if user.followers.contains(app.user) == false %}
+                        <a href="{{ path('following_follow', {'id': user.id}) }}" class="btn btn-outline-primary">
+                            Follow
+                        </a>
+                    {% else %}
+                        <a href="{{ path('following_unfollow', {'id': user.id}) }}" class="btn btn-outline-danger">
+                            Unfollow
+                        </a>
+                    {% endif %}
+                {% endif %}
             </div>
         </div>
     </div>
