follow unfollow functionality, security, verifying uniqueness

--- a/templates/post/user-posts.html.twig
+++ b/templates/post/user-posts.html.twig
@@ -10,7 +10,7 @@
                 </h5>
 
                 {#app.user is the currently authenticated user#}
-                {% if user != app.user %}
+                {% if is_granted('ROLE_USER') and user != app.user %}
                     {% if user.followers.contains(app.user) == false %}
                         <a href="{{ path('following_follow', {'id': user.id}) }}" class="btn btn-outline-primary">
                             Follow
