--- a/templates/post/index.html.twig
+++ b/templates/post/index.html.twig
@@ -7,20 +7,30 @@
         </div>
     {% endfor %}
 
-    <h6 class="border-bottom border-gray pb-2 mb-0">Recent updates</h6>
+    {% if usersToFollow|length > 0 %}
+        <p>You currently do not follow anyone, you might find these users interesting: </p>
 
-    {% for post in posts %}
+        {% for userToFollow in usersToFollow %}
+            <a href="{{ path('following_follow', {'id': userToFollow.id}) }}">
+                @{{ userToFollow.username }}
+            </a>
+        {% endfor %}
 
-        {{ include('post/raw-post.html.twig', { 'post': post }) }}
+    {% else %}
+        <h6 class="border-bottom border-gray pb-2 mb-0">Recent updates</h6>
 
-        <small class="d-block text-right mt-3">
-            {% if is_granted('edit', post) %}
-            <a href="{{ path('post_edit',  {'id': post.id}) }}">Edit</a>
-            {% endif %}
-            {% if is_granted('delete', post) %}
-            <a href="{{ path('post_delete',  {'id': post.id}) }}">Delete</a>
-            {% endif %}
-        </small>
-    {% endfor %}
+        {% for post in posts %}
 
+            {{ include('post/raw-post.html.twig', { 'post': post }) }}
+
+            <small class="d-block text-right mt-3">
+                {% if is_granted('edit', post) %}
+                <a href="{{ path('post_edit',  {'id': post.id}) }}">Edit</a>
+                {% endif %}
+                {% if is_granted('delete', post) %}
+                <a href="{{ path('post_delete',  {'id': post.id}) }}">Delete</a>
+                {% endif %}
+            </small>
+        {% endfor %}
+    {% endif %}
 {% endblock %}
