--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <title>{% block title %}Welcome!{% endblock %}</title>
     {% block stylesheets %}
-        <link rel="stylesheet" href="{{ asset('build/css/app.css') }}">
+        <link rel="stylesheet"
+              href="{{ asset('build/css/app.css') }}">
+        <link rel="stylesheet"
+              href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     {% endblock %}
 </head>
 <body class="bg-light">
@@ -27,6 +30,14 @@
     <div class="order-2 order-md-1">
         <ul class="navbar-nav px-3">
             {% if is_granted('ROLE_USER') %}
+                <li class="nav-item text-nowrap border-right border-secondary">
+                    <a class="nav-link">
+                        Notifications
+                        <span class="badge badge-light" id="notification-count">
+                            <i class="fa fa-circle fa-circle-o-notch fa-spin"></i>
+                        </span>
+                    </a>
+                </li>
                 <li class="nav-item text-nowrap">
                     <a class="nav-link"
                        href="#">{{ app.user.fullName }}</a>
@@ -53,6 +64,26 @@
 </main>
 {% block javascripts %}
     <script src="{{ asset('build/js/app.js') }}"></script>
+
+    {% if is_granted('ROLE_USER') %}
+        <script>
+            function fetchNotificationCount() {
+                fetch(
+                    '{{ path('notification_unread') }}',
+                    {'credentials': 'include'}
+                ).then(function (response) {
+                    response.json().then(function (json) {
+                        document.getElementById('notification-count').innerText = json.count;
+                        setTimeout(fetchNotificationCount,5000);
+                    });
+                }).catch(function (reason) {
+
+                })
+            }
+
+            fetchNotificationCount();
+        </script>
+    {% endif %}
 {% endblock %}
 </body>
 </html>
