--- a/templates/notification/notifications.html.twig
+++ b/templates/notification/notifications.html.twig
@@ -2,24 +2,40 @@
 
     {% block body %}
         <div class="card">
-            <div class="card-body">
-                <h5>Unread Notifications</h5>
-            </div>
+            {% if notifications|length %}
+                <div class="card-body">
+                    <h5>Unread Notifications</h5>
+                </div>
 
-            <ul class="list-group list-group-flush">
-                {% for notification in notifications %}
+                <ul class="list-group list-group-flush">
                     <li class="list-group-item">
-                        {% if notification is like %}
-                            <a href="{{ path('post_user', {'username':notification.likedBy.username}) }}">
-                                {{ notification.likedBy.username }}
-                            </a>
-                                likes your
-                            <a href="{{ path('post_post', {'id':notification.post.id}) }}">
-                                post
-                            </a>
-                        {% endif %}
+                        <a class="btn btn-block btn-default btn-link btn-outline-info"
+                            href="{{ path('notification_acknowledge_all') }}">
+                                Mark All As Read
+                        </a>
                     </li>
-                {% endfor %}
-            </ul>
+                    {% for notification in notifications %}
+                        <li class="list-group-item">
+                            <a href="{{ path('notification_acknowledge', {'id': notification.id}) }}"
+                                class="btn btn-sm btn-primary float-right">
+                                OK
+                            </a>
+                            {% if notification is like %}
+                                <a href="{{ path('post_user', {'username':notification.likedBy.username}) }}">
+                                    {{ notification.likedBy.username }}
+                                </a>
+                                    likes your
+                                <a href="{{ path('post_post', {'id':notification.post.id}) }}">
+                                    post
+                                </a>
+                            {% endif %}
+                        </li>
+                    {% endfor %}
+                </ul>
+            {% else %}
+            <div class="card-body">
+                You Have No Notifications
+            </div>
+            {% endif %}
         </div>
     {% endblock %}
