account confirmation(using secure token, confirmation link on email)

--- a/templates/email/registration.html.twig
+++ b/templates/email/registration.html.twig
@@ -1,7 +1,12 @@
 <h3>Welcome to the App!</h3>
 
-Hello {{ user.fullName }}! You've registered into the app!
+Hello {{ user.fullName }}! You've registered into the app! <br><br>
 
-To login, go to <a href="{{ url('security_login') }}">login page</a>.
+Please confirm account by clicking this
+<a href="{{ url('security_confirm', {'token': user.confirmationToken}) }}">
+    link
+</a>
+
+To login, go to <a href="{{ url('security_login') }}">login page</a>. <br><br>
 
 Thanks!
